# karakuri

./: .env-example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build_example.jai  build_rs_cov.profraw  cspell.json  ideas.md  odinfmt.json  ols.json  test.jai  todo.md
.github/workflows/: odin.yml  rust.yml
Karakuri/: components.jai  engine.jai  fps_manager.jai  module.jai  window_manager.jai
Karakuri/components/: module.jai
Karakuri/platform/: fps_manager.jai  input.jai  module.jai  window_manager.jai
Karakuri/sprite_renderer/: module.jai
Karakuri/world/: behavior.jai  entity.jai  module.jai  scene.jai  world.jai
crates/kec/: Cargo.toml
crates/kec/src/: entity.rs  errors.rs  lib.rs  query.rs  registry.rs  signature.rs  world.rs
crates/kec/tests/: query_tests.rs
crates/klogger/: Cargo.toml
crates/kmath/: Cargo.toml
crates/kphysics/: Cargo.toml
crates/kphysics/examples/canary/: app.rs  main.rs
crates/kphysics/examples/soft_body/: app.rs
crates/kphysics/examples/spring/: app.rs  main.rs
crates/kphysics/src/: collision_detector.rs  contact.rs  contact_information.rs  force_generator.rs  lib.rs  particle.rs  particle_force_generator.rs  rigid_body.rs  simulator.rs  world.rs
crates/kphysics/src/collisions/: collision_detector.rs  constraint.rs  contact.rs  errors.rs  mod.rs  separation_info.rs
crates/kphysics/src/collisions/constraints/: constraint.rs  constraint_base.rs  mod.rs
crates/kphysics/src/constraints/: constraint.rs  constraint_base.rs  constraint_resolver_base.rs  constraint_resolvers.rs  distance_constraint.rs  joint_constraint.rs  joint_constraint_resolver.rs  mod.rs  penetration_constraint.rs  utils.rs
crates/kphysics/src/shapes/: circle.rs  mod.rs  polygon.rs  rectangle.rs  shape.rs
crates/kutils/: Cargo.toml
crates/kutils/src/: collision.rs  color.rs  lib.rs  size.rs
crates/kwindow/: Cargo.toml
crates/kwindow/src/: asset_storage.rs  fps_controller.rs  input_processor.rs  lib.rs  renderer.rs  timer.rs
examples/: breakout.rs  canary.rs  ols.json  shmup.rs
examples/camera/: main.rs
examples/canary/: canary.odin  level_1.jai  main.jai  main.rs  sonic_prefab.jai
examples/collisions/: box_prefab.rs  collisions.odin  main.rs  operator_prefab.rs
examples/pong/: aabb.jai  ball_prefab.jai  camera_prefab.jai  main.jai  main.rs  paddle_prefab.jai  scene.jai  wall_prefab.jai
examples/racing/: CREDITS.md  main.rs
examples/shmup/: CREDITS.md  background_prefab.jai  camera_prefab.jai  enemy_prefab.jai  enemy_prefab.odin  enemy_spawner_prefab.jai  enemy_spawner_prefab.odin  main.jai  main.rs  player_prefab.jai  player_prefab.odin  player_prefub.odin  projectile_destroyer_prefab.jai  projectile_destroyer_prefab.odin  projectile_destroyer_prefub.odin  projectile_prefab.jai  projectile_prefab.odin  scene.jai  shmup.odin  stars_background_prefab.jai  texture_loader.rs
examples/sprite/: main.rs
karakuri/: Cargo.toml  game.odin  lib.odin  ols.json
karakuri/asset_store/: asset_store.odin
karakuri/components/: box_collider_component.odin  component_bundle.odin  shape_component.odin  sprite_component.odin  transform_component.odin
karakuri/entity/: behavior.odin  entity.odin  entity_manager.odin
karakuri/entity_manager/: entity.odin  entity_manager.odin
karakuri/examples/: breakout.rs
karakuri/game/: game.odin
karakuri/input_manager/: input_manager.odin
karakuri/kcore/components/: behavior_component.odin  component_bundle.odin  shape_component.odin  transform_component.odin
karakuri/kcore/game/: game.odin
karakuri/kcore/scene/: scene.odin
karakuri/kec/: entity.odin  query.odin  registry.odin  signature.odin
karakuri/kmath/vector2/: vector2.odin
karakuri/kutils/: color.odin
karakuri/kwindow/input_manager/: input_manager.odin
karakuri/kwindow/renderer/: renderer.odin
karakuri/scene/: scene.odin
karakuri/src/: components.rs  core.rs  engine.rs  lib.rs  scene.rs
karakuri/src/components/: behavior_component.rs  name_component.rs  shape_component.rs  transform_component.rs
karakuri/src/core/: fps_controller.rs  input_controller.rs  renderer.rs
karakuri/src/math/: vector2.rs
karakuri/src/scene/: scene_impl.rs
karakuri/src/utils/: color.rs  resolution.rs
karakuri/world/: behavior.odin  collision_system.odin  entity.odin  world.odin
kec/src/: world.rs
kmath/: Cargo.toml
kmath/src/: vector2.rs
kmath/vector2/: vector2.odin
libs/ktimer/: ols.json
libs/kutils/: ols.json
libs/kwindow/: ols.json  window_creation.odin
sandbox/: Cargo.toml
sandbox/src/: game.ts  main.rs
src/: animator.rs  components.rs  engine.rs  entity.rs  errors.rs  event_buss.rs  game.rs  game_config.rs  input_processor_wrapper.rs  lib.rs  main.rs  math.rs  scene.rs  spawner.rs  update_context.rs  utils.rs
src/Asset_Manager/: module.jai
src/FPS_Manager/: module.jai
src/Input_Manager/: module.jai
src/Karakuri/: camera.jai  components.jai  engine.jai  entity.jai  input.jai  math.jai  module.jai  scene.jai  signature.jai  world.jai
src/Maybe/: module.jai
src/Sprite_Renderer/: module.jai  quad_mesh.jai  renderer.jai  shader.jai  texture.jai
src/Sprite_Renderer_2/: module.jai  renderer.jai  shader.jai  texture.jai
src/Timer/: module.jai
src/Window_Manager/: module.jai
src/adapters/: asset_storage_adapter.rs  event_sender.rs  event_sender_adapter.rs  input_processor_adapter.rs  mod.rs  registry_adapter.rs  renderer_adapter.rs  timer_adapter.rs
src/components/: animation_component.rs  animation_controller_component.rs  behavior.rs  (+16 more)
tests/: main_test.jai  math.test.jai  maybe.test.jai  maybe_test.jai  ols.json  signature.test.jai  signature_test.jai  tests.jai  tests.odin  timer.test.jai
tools/: pre_commit.jai
(+111 files in other folders)
