[package]
name = "karakuri"
version = "0.0.0"
edition = "2021"
description = "2D game engine"
exclude = [".github"]
publish = true
homepage = "https://github.com/IrvingWash/karakuri"
repository = "https://github.com/IrvingWash/karakuri.git"
readme = "README.md"
documentation = "https://github.com/IrvingWash/karakuri"
license = "MIT"
authors = ["WI"]
keywords = ["game", "engine", "gamedev", "graphics"]
categories = ["game-engines"]

[workspace]
resolver = "2"
members = ["crates/*"]

[dependencies]
kec = { path = "crates/kec" }
kmath = { path = "crates/kmath" }
kutils = { path = "crates/kutils" }
kwindow = { path = "crates/kwindow" }
