[package]
name = "karakuri"
version = "0.0.0"
edition = "2021"
description = "2D game engine"
exclude = [".github"]
publish = true
homepage = "https://github.com/IrvingWash/karakuri"
repository = "https://github.com/IrvingWash/karakuri.git"
readme = "README.md"
documentation = "https://github.com/IrvingWash/karakuri"
license = "MIT"
authors = ["WI"]
keywords = ["game", "engine", "gamedev", "graphics"]
categories = ["game-engines"]

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.clippy]
needless_pass_by_ref_mut = "forbid"
needless_pass_by_value = "forbid"
absolute_paths = "forbid"
absurd_extreme_comparisons = "forbid"
assertions_on_result_states = "forbid"
cast_lossless = "forbid"
clear_with_drain = "forbid"
clone_on_ref_ptr = "forbid"
cognitive_complexity = "forbid"
collection_is_never_read = "forbid"
dbg_macro = "forbid"
default_trait_access = "forbid"
equatable_if_let = "forbid"
explicit_into_iter_loop = "forbid"
fallible_impl_from = "forbid"
float_cmp = "forbid"
implicit_clone = "forbid"
iter_filter_is_ok = "forbid"
iter_filter_is_some = "forbid"
iter_with_drain = "forbid"
large_types_passed_by_value = "forbid"
manual_is_variant_and = "forbid"
manual_let_else = "forbid"
manual_ok_or = "forbid"
manual_string_new = "forbid"
or_fun_call = "forbid"
redundant_else = "forbid"
self_named_module_files = "forbid"
set_contains_or_insert = "forbid"
type_id_on_box = "forbid"
unnecessary_self_imports = "forbid"

[lints]
workspace = true

[dependencies]
kec = { path = "crates/kec" }
kmath = { path = "crates/kmath" }
kutils = { path = "crates/kutils" }
kwindow = { path = "crates/kwindow" }

[dev-dependencies]
rand = "0.8.5"
