[package]
name = "kec"
version = "0.1.0"
edition = "2021"
publish = false
description = "Simple Entity Component implementation"
homepage = "https://github.com/IrvingWash/karakuri"
repository = "https://github.com/IrvingWash/karakuri.git"
documentation = "https://github.com/IrvingWash/karakuri"
license = "MIT"
authors = ["WI"]

[dependencies]
