[package]
name = "kutils"
version = "0.1.0"
edition = "2021"
publish = false
description = "Utilities"
homepage = "https://github.com/IrvingWash/karakuri"
repository = "https://github.com/IrvingWash/karakuri.git"
documentation = "https://github.com/IrvingWash/karakuri"
license = "MIT"
authors = ["WI"]

[lints]
workspace = true

[dependencies]
kmath = { path = "../kmath" }
