[package]
name = "kwindow"
version = "0.1.0"
edition = "2021"
publish = false
description = "Windowing"
homepage = "https://github.com/IrvingWash/karakuri"
repository = "https://github.com/IrvingWash/karakuri.git"
documentation = "https://github.com/IrvingWash/karakuri"
license = "MIT"
authors = ["WI"]

[dependencies]
raylib = "5.0.2"
kutils = { path = "../kutils" }
kmath = { path = "../kmath" }
